# clariFi

./: CLAUDE.md  Makefile  PRD.md  README.md
backend/: .envrc.example  .gitignore  README.md  pyproject.toml  pytest.ini
backend/app/: __init__.py  api.py  config.py  database.py  models.py
backend/app/services/: csv_parser.py
backend/src/: api.py  database.py  main.py  models.py  schemas.py
backend/src/services/: csv_parser.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_csv_parser.py  test_main.py  test_schemas.py
frontend/: README.md  jest.config.js  jest.setup.js  package-lock.json  package.json  sample.csv  test-upload.html
frontend/__tests__/components/: transaction-table.test.tsx  upload-zone.test.tsx
frontend/__tests__/hooks/: use-theme.test.ts
frontend/__tests__/lib/: api.test.ts  utils.test.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/transactions/upload/: route.ts
frontend/components/: analytics-dashboard.tsx  theme-toggle.tsx  transaction-table.tsx  upload-zone.tsx
frontend/hooks/: use-theme.ts
frontend/lib/: api.ts  types.ts  utils.ts
